[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "TopoEmbedX"
dynamic = ["version"]
authors = [
    {name = "Mustafa Hajij", email = "mhajij@usfca.edu"},
    {name = "Mathilde Papillon", email = "papillon@ucsb.edu"},
    {name = "Florian Frantzen", email = "florian.frantzen@cs.rwth-aachen.de"}
]
readme = "README.md"
description = "Representation Learning on Topological Domains"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">= 3.10"
dependencies=[
    "numpy",
    # karateclub did not receive updates on PyPI for a long time.
    # We ask the user to manually install a recent version from GitHub.
    "karateclub",
    "networkx",
    "pyrandwalk",
    "scipy",
    "toponetx",

    # These dependencies did not receive a new release on PyPI for a long time.
    # We ask the user to manually install the latest version from GitHub separately.
    "karateclub",
    "pygsp"
]

[project.optional-dependencies]
doc = [
    "jupyter",
    "matplotlib",
    "nbsphinx",
    "nbsphinx_link",
    "numpydoc >= 1.8.0",
    "sphinx",
    "sphinx-copybutton",
    "sphinx_gallery",
    "pydata-sphinx-theme"
]
lint = [
    "pre-commit",
    "ruff"
]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "jupyter",
    "mypy"
]

dev = ["TopoEmbedX[test, lint]"]
all = ["TopoEmbedX[dev, doc]"]

[project.urls]
documentation="https://pyt-team.github.io/topoembedx/"
source="https://github.com/pyt-team/TopoEmbedX/"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F", # pyflakes errors
    "E", # code style
    "W", # warnings
    "I", # import order
    "UP", # pyupgrade rules
    "B", # bugbear rules
    "PIE", # pie rules
    "Q", # quote rules
    "RET", # return rules
    "SIM", # code simplifications
    "NPY", # numpy rules
    "PERF", # performance rules
    "RUF", # miscellaneous rules
]
ignore = ["E501"] # line too long

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
include = ["topoembedx"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "topoembedx/_version.py"

[tool.mypy]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disable_error_code = ["import-untyped"]
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::FutureWarning",
    "ignore::scipy.sparse._base.SparseEfficiencyWarning",
]
log_cli_level = "info"
testpaths = ["test"]

[tool.coverage.report]
exclude_lines = ["pragma: not covered", "@overload"]

[tool.numpydoc_validation]
checks = [
    "all",
    "GL01",
    "ES01",
    "EX01",
    "SA01"
]
exclude = [
    '\.__init__$',
]
